Move name from i18n to config

--- a/gift_box/lib/static/i18n/de.i18n.yaml
+++ b/gift_box/lib/static/i18n/de.i18n.yaml
@@ -11,8 +11,7 @@ pages:
   shopCatalog:
     appBar: 'Awesome Shop'
     purchased: 'Gekauft'
-    name: 'QUOC!'
-    welcomeBack(rich): 'WILLKOMMEN ZURÜCK, ${name}'
+    welcomeBack(rich): 'WILLKOMMEN ZURÜCK, ${name}!'
     items:
       ada:
         name: 'Künstliches Verzeichnis und Assistent (ADA)'
